# data-engineering-for-machine-learning

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  LICENSE  README.md  locals.tf  main.tf  outputs.tf  pyproject.toml  requirements.txt  s3_buckets.tf  terraform.tf
access-control/: crb-spark-operator-airflow-orchestrator.yaml  crb-spark-operator-airflow-processing.yaml
charts/airflow/: Chart.yaml
charts/argocd/: Chart.yaml  values.yaml
charts/cert-manager/: Chart.yaml
charts/cp-schema-registry/: Chart.yaml
charts/feast/: README.md  README.md.gotmpl
charts/gitlab/: Chart.yaml  values.yaml
charts/jupyterhub/: values.schema.json
charts/jupyterhub-old/: values.yaml
charts/jupyterhub1/: Chart.yaml
charts/kafka/: Chart.yaml
charts/kafka-ui/: Chart.yaml  README.md
charts/keycloak/: Chart.yaml
charts/keycloak-operator/: Chart.yaml
charts/kube-prometheus-stack/: Chart.yaml  kustomization.yaml  values.yaml
charts/kuberay-apiserver/: Chart.yaml
charts/kuberay-operator/: Chart.yaml  README.md
charts/loki-microservice/: Chart.yaml
charts/loki-stack/: Chart.yaml
charts/metallb/: Chart.yaml
charts/minio/: Chart.yaml  values.yaml
charts/mlflow/: Chart.yaml
charts/mysql/: Chart.yaml
charts/pinot/: Chart.yaml  pinot-github-events-setup.yml  pinot-realtime-quickstart.yml
charts/postgresql/: Chart.yaml
charts/ray-cluster/: Chart.yaml
charts/reflector/: Chart.yaml
dags/: .flake8  README.md  conftest.py  feature_eng.py  mypy.ini  pytest.ini  requirements.txt  setup.py
secrets/: minio-secrets.yaml  postgres-secrets.yaml
(+396 files in other folders)
